[build-system]
requires = ["setuptools", "hatchling"]
build-backend = "setuptools.build_meta"

[project]
name = "test_project"
dynamic = ["version"]
description = "Test Project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.version]
path = "src/test_project/__about__.py"
